test_scores/negative_dimers/features/Q92888.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/Q92888.pkl.xz